--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p>
             公開されているPDFを日本語に翻訳してみた。<br>
             <br>
+            <a href="papers/2026_Geometric_and_Dynamic_Scaling_in_Deep_Transformers/Geometric_and_Dynamic_Scaling_in_Deep_Transformers.html">2026 GEOMETRIC AND DYNAMIC SCALING IN DEEP TRANSFORMERS (MGT)</a><br>
             <a href="2025_WHAT CAN GROKKING TEACH US ABOUT LEARNING/WHAT CAN GROKKING TEACH US ABOUT LEARNING UNDER NONSTATIONARITY.html">2025 非定常性下での学習についてグロッキングから何が学べるか ?</a><br>
             <a href="2025_Welcome to the Era of Experience/2025_Welcome to the Era of Experience.html">2025 経験の時代へようこそ</a><br>
             <a href="2025_HRM/Hierarchical Reasoning Model.html">2025 HRM 階層的推論モデル</a><br>
