--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <a href="2001_Viola_Jones_Face_Detection/2001_Robus Real-time Object Detection.html">2001 (Viola & Jones 顔検出器)</a><br>
             <a href="1998_PageRank/The PageRank Citation Ranking.html">1998 PageRank</a><br>
             <a href="papers/1998_Creativity_and_AI/Creativity_and_artificial_intelligence.html">1998 Creativity and Artificial Intelligence</a><br>
+            <a href="papers/1996_sparse_code/1996_sparse_code.html">1996 自然画像に対するスパースコードの学習による単純細胞受容野特性の出現</a><br>
             <a href="1994_Quantum optical coherence in cytoskeletal microtubules/Quantum optical coherence in cytoskeletal microtubules.html">1994 細胞骨格微小管における量子光コヒーレンス</a><br>
             <a href="1992_plenoptic_camera/1992_Single_Lens_Stereo_with_a_Plenoptic_Camera.html">1992 (プレノプティック・カメラ)</a><br>
             <a href="1985_Feynman_QM_Computer/Quantum_Mechanics_Computer.html">1985 可逆マシン(ファインマン)</a><br>
