Add link to 2019 ToM as IRL paper

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <a href="2020_The science of deep learning/2020_The science of deep learning.html">2020 DLの科学</a><br>
             <a href="2020_The_Unreasonable_Effectiveness_of_DL_in_AI/2020_The Unreasonable Effectiveness of DL in AI.html">2020 AIにおけるDLの不合理な有効性</a><br>
             <a href="2019_The Lottery Ticket Hypothesis/2019_The Lottery Ticket Hypothesis - Finding Sparse, Trainable Neural Networks.html">2019_(宝くじ仮説)</a><br>
+            <a href="papers/2019_ToM_as_IRL/2019_ToM_as_IRL.html">2019 逆強化学習としての心の理論</a><br>
             <a href="2018_LPIPS/2018_The Unreasonable Effectiveness of Deep Features as a Perceptual Metric.html">2018 (LPIPS)</a><br>
             <a href="2017_AlphaGo_Zero/2017_Mastering the game of Go without human knowled.html">2017 AlphaGo Zero</a><br>
             <a href="2016_FingerIO/2016_FingerIO Using Active Sonar for Fine-Grained Finger Tracking.html">2016 (FingerIO)</a><br>
