Add link to 1999 SIFT paper in index.html

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <a href="2007_Nonlinear_Quantum_Mechanics/2007_Classical_Mechanics_as_Nonlinear_Quantum_Mechanics.html">2007 (非線形量子力学としての古典力学)</a><br>
             <a href="2004_QBD_and_QFT/Quantum Brain Dynamics and Quantum Field Theory.html">2004 量子脳ダイナミクスと場の量子論</a><br>
             <a href="2001_Viola_Jones_Face_Detection/2001_Robus Real-time Object Detection.html">2001 (Viola & Jones 顔検出器)</a><br>
+            <a href="papers/1999_SIFT/SIFT.html">1999 SIFT</a><br>
             <a href="1998_PageRank/The PageRank Citation Ranking.html">1998 PageRank</a><br>
             <a href="papers/1998_Creativity_and_AI/Creativity_and_artificial_intelligence.html">1998 Creativity and Artificial Intelligence</a><br>
             <a href="papers/1996_sparse_code/1996_sparse_code.html">1996 自然画像に対するスパースコードの学習による単純細胞受容野特性の出現</a><br>
