Add links to translated papers in index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p>
             公開されているPDFを日本語に翻訳してみた。<br>
             <br>
+            <a href="papers/2026_From_Kepler_to_Newton/From_Kepler_to_Newton.html">2026 ケプラーからニュートンへ</a><br>
             <a href="papers/2026_JIT_World_Modeling/JIT_World_Modeling.html">2026 JIT World Modeling</a><br>
             <a href="papers/2026_Geometric_and_Dynamic_Scaling_in_Deep_Transformers/Geometric_and_Dynamic_Scaling_in_Deep_Transformers.html">2026 GEOMETRIC AND DYNAMIC SCALING IN DEEP TRANSFORMERS (MGT)</a><br>
             <a href="papers/2026_Deep_Delta_Learning/Deep_Delta_Learning.html">2026 Deep Delta Learning</a><br>
