--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <a href="papers/2024_The_Big_World_Hypothesis/The_Big_World_Hypothesis.html">2024 The Big World Hypothesis and its Ramifications for Artificial Intelligence</a><br>
             <a href="2024_CognitiveArchitectures/2024_Cognitive Architectures for Language Agents.html">2024 Cognitive Architectures</a><br>
             <a href="2023_From Kepler to Newton/From Kepler to Newton.html">2023 ケプラーからニュートンへ：科学のための説明可能な AI</a><br>
+            <a href="papers/2023_OMNIGROK/OMNIGROK.html">2023 OmniGrok</a><br>
             <a href="2022_GROKKING - GENERALIZATION BEYOND OVERFITTING ON SMALL ALGORITHMIC DATASETS/GROKKING - GENERALIZATION BEYOND OVERFITTING ON SMALL ALGORITHMIC DATASETS.html">2022_Grokking</a><br>
             <a href="2020_The science of deep learning/2020_The science of deep learning.html">2020 DLの科学</a><br>
             <a href="2020_The_Unreasonable_Effectiveness_of_DL_in_AI/2020_The Unreasonable Effectiveness of DL in AI.html">2020 AIにおけるDLの不合理な有効性</a><br>
